<resources>
    <string name="app_name">Clinic Management</string>
    <string name="default_notification_channel_id" translatable="false">channel</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="str_account_type_admin">Administrator</string>
    <string name="str_account_type_client">Client</string>
    <string name="str_account_type_doctor">Doctor</string>

    <string name="str_select_account_type">Select Account Type</string>

    <string name="str_delete_title">Delete Entry</string>
    <string name="str_delete_message">Are you sure you want to delete?</string>

    <string name="str_message_added_successfully">Added Successfully</string>
    <string name="str_message_updated_successfully">Updated Successfully</string>
    <string name="str_message_delete_successfully">Deleted Successfully</string>
    <string name="str_invalid_username_or_password">Invalid username or password</string>
    <string name="str_login_successful">Login Successful</string>

    <string name="str_back_to_home">Back to Home</string>

    <string name="str_more_profile">Profile</string>
    <string name="str_more_about">About</string>
    <string name="str_more_app_info">App Info</string>
    <string name="str_more_change_language">Change Language</string>
    <string name="str_more_language">العربية</string>
    <string name="str_more_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="str_username_hint" translatable="false">user@domin.com</string>
    <string name="str_password_hint">Enter Password</string>
    <string name="str_default_password">Default Password is 12345678</string>

    <string name="str_registration">New Account</string>
    <string name="str_login">Login</string>
    <string name="str_forget_password">Forget Password</string>

    <string name="str_registration_action">Register</string>
    <string name="str_username" translatable="false">Username</string>
    <string name="str_username_invalid">Username Invalid</string>
    <string name="str_password">Password</string>
    <string name="str_password_length_invalid">Password Invalid Length, Password Must Be At Least 8 Digits</string>
    <string name="str_password_confirm_hint">Confirm Password</string>
    <string name="str_password_confirm_invalid">Confirm Password Invalid</string>
    <string name="str_full_name_hint">Full Name</string>
    <string name="str_full_name_invalid">Full Name Invalid</string>
    <string name="str_phone_hint">Phone</string>
    <string name="str_phone_invalid">Phone Invalid</string>
    <string name="str_address_hint">Address</string>
    <string name="str_address_invalid">Address Invalid</string>
    <string name="str_signup_fail">SignUp Fail: %s</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_email">Email</string>
    <string name="str_email_invalid">Email Invalid</string>

    <string name="str_save">Save</string>
    <string name="str_enter_value">Enter Value</string>
    <string name="str_invalid_entered_value">Value invalid or already exist</string>
    <string name="str_ok">نعم</string>
    <string name="str_cancel">الغاء</string>
    <string name="str_message_request_camera_and_storage">يحتاج هذا التطبيق إلى الوصول إلى الكاميرا ومساحة التخزين الخاصة بك حتى تتمكن من التقاط الصور.</string>

    <string name="str_loading">Loading...</string>
    <string name="str_change_avatar"><u>Change Avatar</u></string>
    <string name="str_account_info">Account Info</string>
    <string name="str_account_info_edit">Edit Account Info</string>

    <!-- App info -->
    <string name="appinfo_application_version">Application version:</string>
    <string name="appinfo_qbsdk_version">QuickBlox SDK version:</string>
    <string name="appinfo_application_id">Application ID:</string>
    <string name="appinfo_authorization_key">Authorization key:</string>
    <string name="appinfo_authorization_secret">Authorization secret:</string>
    <string name="appinfo_account_key">Account key:</string>
    <string name="appinfo_api_domain">API domain:</string>
    <string name="appinfo_chat_domain">Chat domain:</string>
    <string name="appinfo_title">App Info</string>
    <string name="appinfo_qa_verion">QA version:</string>

    <string name="splash_app_title">Sample Video Chat Java</string>
    <string name="splash_create_session_error">Create session errors:</string>

    <!-- Dialogs strings -->
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_relogin_wait">You are still connecting.. Please try once more</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_allow">Allow</string>
    <string name="login_chat_retry">Trying Relogin. Please wait a moment</string>

    <!-- Notification -->
    <string name="notification_title">You have an active call</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>

    <!-- Errors strings -->
    <string name="error">Error</string>
    <string name="error_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="login_data_error">Wrong login</string>
    <string name="username_data_error">Wrong username</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error">Error SignIn user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_connection_error">Connection failed. Please check your internet connection.</string>
    <string name="no_responce_timeout">No response received within reply timeout</string>

    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>

    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>

    <string name="permission_unavailable">%s is not available now!</string>

    <string name="error_login">Use your email or alphanumeric characters in a range from 3 to 50. First character must be a letter.</string>
    <string name="error_display_name">Use alphanumeric characters and spaces in a range from 3 to 20. Cannot contain more than one space in a row.</string>

    <!-- menu -->
    <string name="action_start_login">Done</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="action_dialogs_app_info">App Info</string>

    <!-- action bar -->
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to Videochat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>

    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>

    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>

    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>

    <string name="text_welcoming_message">Please enter Login and Display Name.</string>
    <string name="hint_user_login">Login</string>
    <string name="hint_display_name">Display Name</string>

    <string name="text_select_users_to_call">Select users you want to call</string>

    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>

    <string name="text_push_notification_message">"%s is calling you"</string>

    <string name="accepted">Accepted</string>
    <string name="connection_was_lost">Connection was lost</string>
    <string name="opponents">and %s other</string>
    <string name="opponent">and %s </string>
    <string name="ringing">Ringing</string>
    <string name="stop_share">Stop</string>
    <string name="camera_swicth_failed">\"Failed switch camera\"</string>
    <string name="you">You</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_specialities">Specialities</string>
    <string name="title_more">More</string>

    <string name="str_about_content">Content:</string>
    <string name="str_about_conditions">The conditions:</string>
    <string name="str_about_objectives">Objectives:</string>
</resources>