<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgetPasswordActivity">

    <com.devspark.robototextview.widget.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/root_container"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/str_select_account_type"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/root_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/btn_account_client"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_green_outline_background">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_client"
                    android:layout_marginEnd="10dp" />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/str_account_type_client"
                    android:textColor="@color/green"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_account_doctor"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_orange_outline_background">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_doctor"
                    android:layout_marginEnd="10dp"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/str_account_type_doctor"
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>